# StudiumsDashboard

./: .dockerignore  .gitignore  Dockerfile  INSTALLATION.md  README.md  app.py  database.py  docker-compose.yaml  models.py  pyproject.toml  requirements.txt
dash_app/: __init__.py  callbacks.py  layout.py
dash_app/assets/: custom_dash.css
static/: styles.css
templates/: index.html
