[project]
name = "dlbdsoofpp01-d"
version = "0.1.0"
description = "Dashboard App for a portfolio project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash==3.0.2",
    "dash-bootstrap-components==2.0.0",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "plotly==6.0.1",
    "sqlalchemy==2.0.40",
]
